--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0; url=https://1wvhvo.com/v3/aggressive-casino?p=0a7e&sub1=ind">
+    <meta http-equiv="refresh" content="0; url=https://1wqjnb.com/v3/2672/sweet-bonanza?p=p936">
     <title>Redirect</title>
 </head>
 <body>
